# couchdb-conduit

./: .gitignore  ChangeLog  LICENSE  README.md  couchdb-conduit.cabal
mock/: Main.hs
mock/Database/CouchDB/Conduit/Mock/: View.hs
src/Database/CouchDB/: Conduit.hs
src/Database/CouchDB/Conduit/: Attachment.hs  Bulk.hs  Connection.hs  DB.hs  Db.hs  Design.hs  Error.hs  Explicit.hs  Generic.hs  Implicit.hs  Internal.hs  LowLevel.hs  View.hs
src/Database/CouchDB/Conduit/Internal/: Connection.hs  Doc.hs  Parser.hs  Path.hs  View.hs
src/Database/CouchDB/Conduit/View/: Query.hs
test/: CouchDBAuth.hs  Main.hs
test-mock/: Main.hs
test-mock/Database/CouchDB/Conduit/Test/: Aeson.hs  Basic.hs  Connect.hs
test/Database/CouchDB/Conduit/Test/: Attachment.hs  Base.hs  Bulk.hs  Explicit.hs  Generic.hs  Query.hs  Util.hs  View.hs
tmp/src/Database/CouchDB/Conduit/: DB.hs  Design.hs  LowLevel.hs
tmp/src/Database/CouchDB/Conduit/Internal/: Connection.hs  Parser.hs  View.hs
tmp/test/: Main.hs
tmp/test/Database/CouchDB/Conduit/Test/: Explicit.hs  Generic.hs
