name:           couchdb-conduit
version:        0.1
cabal-version:  >= 1.8
build-type:     Simple
stability:      Experimental
category:       Database, Conduit
license:        BSD3
license-file:   LICENSE
author:         Alexander Dorofeev <aka.spin@gmail.com>, John Lenz <lenz@math.uic.edu>
maintainer:     Alexander Dorofeev <aka.spin@gmail.com>
synopsis:       Couch DB client library using http-conduit and aeson

library
  hs-source-dirs:   src
  build-depends:   
                   base >= 4 && < 5,
                   conduit >= 0.0.0.2 && < 0.1,
                   attoparsec >= 0.8 && < 0.11,
                   attoparsec-conduit >= 0.0 && < 0.1,
                   http-conduit >= 1.1.0.1 && < 1.2,
                   http-types >= 0.6 && < 0.7,
                   monad-control >= 0.3 && < 0.4,
                   transformers >= 0.2 && < 0.3,
                   transformers-base >= 0.4.1 && < 0.5,
                   lifted-base >= 0.1 && < 0.2,
                   bytestring >= 0.9 && < 0.10,
                   utf8-string >= 0.3 && < 0.4,
                   aeson >= 0.5 && < 0.6,
                   text >= 0.11 && < 0.12,
                   unordered-containers >= 0.1 && < 0.2,
                   syb
  ghc-options:      -Wall
  exposed-modules:  
                    Database.CouchDB.Conduit,
                    Database.CouchDB.Conduit.DB,
                    Database.CouchDB.Conduit.Explicit,
                    Database.CouchDB.Conduit.Generic,
                    Database.CouchDB.Conduit.View
  other-modules:    
                    Database.CouchDB.Conduit.Internal.Doc,
                    Database.CouchDB.Conduit.Internal.Parser

test-suite test
  type:            exitcode-stdio-1.0
  x-uses-tf:       true
  build-depends:   
                   base >= 4,
                   HUnit >= 1.2 && < 2,
                   QuickCheck >= 2.4,
                   test-framework >= 0.4.1,
                   test-framework-quickcheck2,
                   test-framework-hunit,
                   couchdb-conduit,
                   bytestring,
                   aeson,
                   transformers,
                   utf8-string,
                   lifted-base,
                   syb,
                   conduit,
                   unordered-containers,
                   http-types,
                   http-conduit
  ghc-options:     -Wall -rtsopts -threaded
  hs-source-dirs:  test
  main-is:         Main.hs
  other-modules:   
                   Database.CouchDB.Conduit.Test.Explicit,
                   Database.CouchDB.Conduit.Test.Util,
                   Database.CouchDB.Conduit.Test.View

